--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -24,13 +24,17 @@
 <div class="container" id="container">
     <div class="menu-bar">
 
+        <div class="filter-text_box" id="filter-text_box">
+            <span class="filter_text">Filters</span>
+        </div>
+        <div class="applied-filter_area">
+            <div class="applied-filter_box"></div>
+        </div>
         <div class="productSearchText">
             Search
         </div>
         <div class="productSearchInput">
             <input type="text" placeholder="상품명을 입력하세요" class="searchKeyword" id="searchKeyword">
-            <!-- <label for="searchKeyword" class="searchKeyword-label"><span>* </span>상품검색</label>
-            <div class="inputBorder-hole"></div> -->
             <button id="searchButton" class="searchButton"></button>
         </div>
 
